// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReloadButton isActive = false 1`] = `
<div
  className="reload-button"
>
  <button
    className="reload-button__icon"
    onClick={[Function]}
  >
    <svg
      viewBox="0 0 24 24"
    >
      <g>
        <polyline
          points="23 4 23 10 17 10"
        />
        <polyline
          points="1 20 1 14 7 14"
        />
        <path
          d="M3.51 9a9 9 0 0 1 14.85-3.36L23 10M1 14l4.64 4.36A9 9 0 0 0 20.49 15"
        />
      </g>
    </svg>
  </button>
  <button
    className="menu-button"
    onClick={[Function]}
  >
    <div
      className="menu-button__label"
    >
      Свежее
    </div>
  </button>
</div>
`;

exports[`ReloadButton isActive = true 1`] = `
<div
  className="reload-button reload-button_active"
>
  <button
    className="reload-button__icon reload-button__icon_active"
    onClick={[Function]}
  >
    <svg
      viewBox="0 0 24 24"
    >
      <g>
        <polyline
          points="23 4 23 10 17 10"
        />
        <polyline
          points="1 20 1 14 7 14"
        />
        <path
          d="M3.51 9a9 9 0 0 1 14.85-3.36L23 10M1 14l4.64 4.36A9 9 0 0 0 20.49 15"
        />
      </g>
    </svg>
  </button>
  <button
    className="menu-button"
    onClick={[Function]}
  >
    <div
      className="menu-button__label"
    >
      Свежее
    </div>
  </button>
</div>
`;

exports[`ReloadButton isError = true 1`] = `
<div
  className="reload-button"
>
  <button
    className="reload-button__icon reload-button__icon_error"
    onClick={[Function]}
  >
    <svg
      viewBox="0 0 24 24"
    >
      <g>
        <polyline
          points="23 4 23 10 17 10"
        />
        <polyline
          points="1 20 1 14 7 14"
        />
        <path
          d="M3.51 9a9 9 0 0 1 14.85-3.36L23 10M1 14l4.64 4.36A9 9 0 0 0 20.49 15"
        />
      </g>
    </svg>
  </button>
  <button
    className="menu-button"
    onClick={[Function]}
  >
    <div
      className="menu-button__label"
    >
      Свежее
    </div>
  </button>
</div>
`;

exports[`ReloadButton isSelected = true 1`] = `
<div
  className="reload-button"
>
  <button
    className="reload-button__icon"
    onClick={[Function]}
  >
    <svg
      viewBox="0 0 24 24"
    >
      <g>
        <polyline
          points="23 4 23 10 17 10"
        />
        <polyline
          points="1 20 1 14 7 14"
        />
        <path
          d="M3.51 9a9 9 0 0 1 14.85-3.36L23 10M1 14l4.64 4.36A9 9 0 0 0 20.49 15"
        />
      </g>
    </svg>
  </button>
  <button
    className="menu-button"
    onClick={[Function]}
  >
    <div
      className="menu-button__label"
    >
      Свежее
    </div>
  </button>
</div>
`;
